Fix color contrast

--- a/assets/scss/abstracts/_variables.scss
+++ b/assets/scss/abstracts/_variables.scss
@@ -6,7 +6,7 @@ $color-dark: #293136;
 $color-light: #fefefe;
 $color-fiction: #47009e;
 $color-nonfiction: #ff0054;
-$color-accent: #ff7300;
+$color-accent: #ee6f14;
 
 $colors: (
   fiction: (
